2010-08-08  Sergey Poznyakoff  <gray@gnu.org.ua>

	* info/indices.c (index_partial): New static variable.
	(index_entry_matches): New static function.
	(info_next_index_match): Use index_entry_matches to find
	exact matches. When exact matches are exhausted, look for
	partial matches, starting from the beginning of the index.
	When looking for partial matches, take care not to return
	previous exact matches. 

2010-08-08  Patrice Dumas  <pertusus@free.fr>

	* texi2html/texi2html.init, texi2html/texi2html.pl (do_text):
	warn if [](), appears inside @var. Report from Karl.
	* texi2html/texi2html.pl: accept a --reference-limit=N option
	for backward reference with makeinfo.

2010-08-06  Patrice Dumas  <pertusus@free.fr>

	* texi2html/Makefile.am: generate AUTHORS based on texinfo AUTHORS
	and copy config.rpath.
	* texi2html/texi2html.pl (locate_init_file): explicitly give the
	directories in argument.
	* texi2html/texi2html.init, texi2html/T2h_l2h.pm: no default 
	initialization file for latex2html.  Don't use locate_init_file to 
	find the initialization file.
	* texi2html/texi2html.pl: search in ./ and ./.program_name for init
	files and htmlxref.cnf files.  Report from Karl.

2010-08-05  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Loading Init Files),
	(Init File Basics): shorten names.
	(Init File Variables, Init File Variables): split off from Basics.

2010-08-04  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Setting and Getting Configuration Variables):
	capitalize+edit.

2010-08-02  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Initialization File Basics): capitalize+edit.

2010-08-01  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Loading Initialization Files): capitalize+edit.

2010-08-01  Patrice Dumas  <pertusus@free.fr>

	* texi2html/texi2html.pl (set_variable),
	(get_conf): accept an undef value as a regular value.
	(unset_variable),
	(unset_from_document): unset a variable by removing the 